syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "material_category.proto";
import "production_line.proto";

message ProductReworkRouteInfo {
	//ID 
 	string id=1;
    string ProductionLineID=2;
    ProductionLineInfo productionLine=3;
    string MaterialCategoryID=4;
    MaterialCategoryInfo materialCategory=5;
    string FollowProcessID=6;
    ProductionProcessInfo followProcess=7;
}

message QueryProductReworkRouteRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryProductReworkRouteResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkRouteInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductReworkRouteResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkRouteInfo data=3;
}

message GetProductReworkRouteDetailResponse{
    Code code=1;
    string message=2;
    ProductReworkRouteInfo data=3;
}